cmake_minimum_required(VERSION 3.8)
project(joint_angle_subscriber)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)  # 关键依赖

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()


add_executable(joint_angle_subscriber src/joint_angle_subscriber.cpp)
add_executable(moveit_control src/moveit_control.cpp)


ament_target_dependencies(joint_angle_subscriber 
  rclcpp 
  sensor_msgs 
  moveit_ros_planning_interface
  )
ament_target_dependencies(moveit_control 
  rclcpp 
  sensor_msgs 
  moveit_ros_planning_interface
)

install(TARGETS
  joint_angle_subscriber
  moveit_control
  DESTINATION lib/${PROJECT_NAME}
)
 